# swc-plugin-auto-css-modules

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  swc_plugin_auto_css_modules.wasm
example/: _do.ts  package.json
src/: lib.rs
transform/: Cargo copy.toml  Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
