[package]
name = "auto_css_modules"
version = "0.0.2"
authors = ["fz6m"]
description = "Auto css modules plugin for swc"
edition = "2024"
license = "MIT"
repository = "https://github.com/umijs/swc-plugin-auto-css-modules.git"
publish = false

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
swc_core = { version = "46.0.3", features = [
  "ecma_visit",
  "ecma_ast",
] }

[dev-dependencies]
serde_json = "1.0.114"
swc_core = { features = [
  "ecma_parser",
  "ecma_transforms",
  "testing_transform",
  "common",
], version = "46.0.3" }
testing = "0.35.19"
